--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 /* --- GLOBAL --- */
+/*
+Anthrazit: 303C49
+Red: E40045
+Grey: AFAFAF
+Blue: 4B96D2
+Green: 91B900
+ */
 body {
-    background-color: #0e1117;
+    background-color: #303C49;
     color: white;
 }
 
@@ -9,7 +16,7 @@ body {
 }
 
 .accent {
-    color: #ff6600;
+    color: #E40045;
 }
 
 .muted {
@@ -30,7 +37,7 @@ body {
 /* --- BUTTONS --- */
 .stButton button {
     width: 100%;
-    background-color: #ff6600 !important;
+    background-color: #4B96D2 !important;
     color: white !important;
     font-weight: bold;
     border-radius: 8px;
@@ -39,13 +46,13 @@ body {
 }
 
 .stButton button:hover {
-    background-color: #ff8533 !important;
+    background-color: #AFAFAF !important;
     transition: 0.3s;
 }
 
 /* --- CHAT AREA --- */
 .chat-container {
-    background-color: #1e1e1e;
+    background-color: #303C49;
     padding: 1.5rem;
     border-radius: 1rem;
     box-shadow: 0 0 10px rgba(255, 102, 0, 0.2);
@@ -73,8 +80,8 @@ body {
 }
 
 .user {
-    background-color: #ff6600;
-    color: white;
+    background-color: #4B96D2;
+    color: black;
     float: right;
     clear: both;
 }
